--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
-        "laraveles/spanish": "^1.5"
+        "laraveles/spanish": "^1.5",
+        "tinify/tinify": "^1.5"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
